Various fixes: Fixing styling issues. Renaming Api methods. Adding event onColumnPinning with args - column and insertAtIndex. Making keyboard navigation work on visible indexes. Restore original position (based on index) on unpinning the column.

--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -9,7 +9,7 @@
         @extend %grid-thead !optional;
 
         igx-display-container {
-            overflow: visible;
+            width: 100%;
         }
     }
 
@@ -19,10 +19,18 @@
 
     @include e(tbody) {
         @extend %grid-tbody !optional;
+
+        igx-display-container {
+            height: 100%;
+        }
     }
 
     @include e(tbody, $m: empty) {
         @extend %grid-tbody--empty !optional;
+        
+        igx-display-container {
+            height: 100%;
+        }
     }
 
     @include e(tr) {
